=head1 Krang Changelog

This document contains a list of changes for each release of Krang.

=head2 3.00 - IN DEVELOPMENT

=over

=item *

Fix ordering of media types on media UI to be in alphabetical
order. [Eric Folley]

=item *

Completely new skin. [Don Brodale and Michael Peters]

=item *

New AJAX interface and Javascript re-write. [Michael Peters]

=item *

Added a new forgot-password functionality to the login screen. 
[Michael Peters]

=item *

Added the C<EnableFTP> config directive which is true after an
upgrade. [Michael Peters]

=item *

Added the C<Secret> config directive to be used for encryption and
encoding. [Michael Peters]

=item *

Added the C<ContactEmail> and C<ContactURL> config directives to be used in
links in the footer. [Michael Peters]

=item *

Added the C<CustomCSS> config directive which allows each instance to change
the CSS for the CMS. Most commonly this can be used to add specific logo
images per-instance. [Michael Peters]

=item *

Fixed bug #10. Extended Skins configuration by allowing an arbitrary list
of CSS colors that will be put into an arbitrary number of F<.css.tmpl>
files.  [Michael Peters]

=item *

Fixed bug #3. C<< $publisher->publish_context >> now does not die if called without data

=back

=head2 2.XXX - IN DEVELOPMENT

=over

=item *

Added F<krang_src_dependency_check> script to check Perl source module
dependencies. [Michael Peters]

=item * 

In Krang::ElementClass::CategoryLink, Krang::ElementClass::MediaLink
and Krang::ElementClass::StoryLink fixed addon v2 compat bugs.
[Bodo Schulze]

=item *

After you've already built Krang C<--with--ssl>, if you do a C<krang_build
--rebuild> it will do the rebuild C<--with-ssl> too. [Michael Peters]

=item *

In Krang::CGI::Media::list_active_row_handler(), fixed building of
thumbnail preview link. [Bodo Schulze]

=item *

In Krang::CGI::Story's create() method, fixed building of message
string after a Krang::Story::DuplicateURL error has been thrown.
[Bodo Schulze]
