@@ -9,8 +9,8 @@
 # Krang processes run as this user/group and all files must be owned by
 # this user.
 #
-KrangUser sam
-KrangGroup sam
+KrangUser  jesse
+KrangGroup jesse
 
 #
 # MySQL user and password for Krang
@@ -21,14 +21,14 @@ DBPass ""
 # 
 # ApacheAddr and ApachePort: the IP and port for the Apache server
 #
-ApacheAddr 127.0.0.1
+ApacheAddr 192.168.40.128
 ApachePort 80
 
 #
 # HostName: the virtual host for the root server, which
 # displays a list of available instances.
 #
-HostName localhost.localdomain
+HostName turdblossom
 
 #
 # EnableSiteServer: the site server offers developers a means to test
@@ -37,7 +37,7 @@ HostName localhost.localdomain
 # must differ from the ApacheAddr and ApachePort settings.
 #
 EnableSiteServer 1
-SiteServerAddr 127.0.0.1
+SiteServerAddr 192.168.40.128
 SiteServerPort 8080
 
 #
@@ -52,7 +52,7 @@ LogLevel 2
 # Krang internal FTP server.
 #
 EnableFTP 1
-FTPAddress 127.0.0.1
+FTPAddress 192.168.40.128
 FTPHostName localhost
 FTPPort 2121
 
@@ -90,7 +90,7 @@ Skin Default
 # Current wisdom suggests a 3:1 ratio of children to available CPUs.
 # (Set to 0 to disable scheduler.)
 #
-SchedulerMaxChildren 3
+SchedulerMaxChildren 0
 
 #
 # This variable controls the character-set for Krang's user interface.
